# x3d2

./: .buildinfo  .fprettify.ini  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  action.yml  allocator.f03  ford.md  genindex.html  index.html  modules.json  objects.inv  report_a_bug.html  search.html  searchindex.js  style.org
_images/: graphviz-076766984f34b93a9d82f4bb29530f62cfc702af.png.map  graphviz-8034e46f472445428ec0a3908c62f907b47614c3.png.map  graphviz-981eacfab8eb2a42215ddeb7564c51358af44bb0.png.map
api/: index.html  search.html
cmake/: .Finddecomp2d.cmake.swp  CMakeCache.txt  Finddecomp2d.cmake  SelectBackend.cmake
developer/: build.html  contributing_guidelines.html  contribution_workflow.html  dev_environment.html  index.html  style.html  tooling.html  writing_docs.html
docs/: Makefile  docs-requirements.txt  ford.md  make.bat  requirements.txt
githooks/: commit-msg  pre-commit
interface/: alloc_tdsops.html  allocator_t.html  apply_bc.html  boundary_conditions.html  case_channel_t.html  case_cylinder_t.html  case_generic_t.html  case_tgv_t.html  checkpoint_manager_t.html  copy_data_to_f.html  copy_f_to_data.html  cuda_allocator_t.html  cuda_backend_t.html  cuda_field_t.html  cuda_poisson_fft_t.html  cuda_tdsops_t.html  cufftexecc2r_c.html  cufftexecr2c_c.html  define_bc.html  field_ops.html  (+41 more)
src/: CMakeLists.txt  adios2_io.f90  adios_io.f90  allocator.f03  allocator.f90  backend.f90  base_case.f90  case.f90  channel.f90  checkpoint_dummy.f90  checkpoint_io.f90  common.f90  config.f90  cylinder.f90  decomp.f90  decomp_generic.f90  derparams.f90  diffengine.f03  diffengine.f90  domain.f90  exec_dist.f90  exec_thom.f90  field.f90  fieldops.f90  generic.f90  ibm.f90  io.f90  io_base.f90  io_field_utils.f90  io_manager.f90  io_session.f90  main.f03  mesh.f90  mesh_content.f90  ordering.f90  par_grid.f90  poisson_cg.f90  poisson_cg_types.f90  poisson_fft.f90  postprocess.f90  (+26 more)
src/2decompfft/: decomp.f90
src/2decompfft/omp/: poisson_fft.f90
src/adios2/: adios2_base.f90  adios2_io.f90  adios2_reader.f90  adios2_writer.f90  checkpoint_dummy.f90  checkpoint_io.f90
src/backend/: backend.f90
src/backend/cuda/: allocator.f90  backend.f90  common.f90  exec_dist.f90  exec_thom.f90  poisson_fft.f90  sendrecv.f90  tdsops.f90
src/backend/cuda/kernels/: distributed.f90  fieldops.f90  reorder.f90  spectral_processing.f90  thomas.f90
src/backend/omp/: allocator.f90  backend.f90  common.f90  exec_dist.f90  exec_thom.f90  poisson_fft.f90  sendrecv.f90
src/backend/omp/kernels/: distributed.f90  spectral_processing.f90  thomas.f90
src/case/: base_case.f90  channel.f90  cos2pix.f90  cylinder.f90  generic.f90  tgv.f90  wind_turbine.f90
src/cuda/: allocator.f90  backend.f90  common.f90  cuda_allocator.f03  cuda_allocator.f90  exec_dist.f90  exec_thom.f90  kernels_dist.f90  kernels_reorder.f90  kernels_trans.f90  poisson_fft.f90  sendrecv.f90  tdsops.f90
src/cuda/kernels/: complex.f90  distributed.f90  fieldops.f90  reorder.f90  spectral_processing.f90  thomas.f90
src/decomp/: decomp.f90  decomp_2decompfft.f90  decomp_dummy.f90
src/dummy/: poisson_cg.f90
src/io/: adios2_io.f90  checkpoint_dummy.f90  checkpoint_io.f90  checkpoint_manager.f90  checkpoint_state.f90  io_adios2.f90  io_base.f90  io_dummy.f90  io_factory.f90  io_field_utils.f90  io_manager.f90  io_service.f90  io_session.f90  snapshot_manager.f90  stats.f90
src/io/adios2/: io.f90
src/io/adios2/c/: adios2_cuda_wrapper.c
src/io/dummy/: io.f90
src/module/: ibm.f90
src/omp/: backend.f90  common.f90  exec_dist.f90  exec_thom.f90  kernels_dist.f90  mesh.f90  poisson_fft.f90  sendrecv.f90
src/omp/kernels/: distributed.f90  spectral_processing.f90
src/petsc/: poisson_cg.f90
src/postprocess/: monitoring.f90  postprocess.f90  scalar_series.f90
src/turbine/: turbine_dummy.f90  turbine_model.f90
tests/: CMakeLists.txt  allocator_main.f90  cuda_allocator_main.f90  solve_reference_tridiagonal.py  test_ab_checkpoint.f90  test_adios2_read_write.f90  test_allocator.f03  test_allocator.f90  test_diffengine.f90  test_fft.f90  test_hostside_io.f90  test_io_session.f90  test_mesh.f90  test_omp_io.f90  test_pfunit_demo.pf  test_poisson.f90  test_poisson_bc.f90  test_poisson_cg_eval.f90  test_poisson_cg_solve.f90  test_reorder_map.f90  test_reordering.f90  test_scalar_product.f90  test_setget_field.f90  test_statistics.f90  test_stencil.f90  test_sum_intox.f90  test_sum_yintox.f90  test_sum_zintox.f90  test_time_integrator.f90  test_tridiagonal.f03  test_tridiagonal.f90  test_vecadd.f90  x3d2_checks.py  x3d2_perf_checks.py
tests/common/: m_test_utils.f90  test_utils.f90
tests/cuda/: test_allocator.f90  test_cuda_allocator.f90  test_cuda_gpu_aware_io.f90  test_cuda_reorder.f90  test_cuda_transeq.f90  test_cuda_tridiag.f90  test_thom.f90
tests/omp/: test_omp_adamsbashforth.f90  test_omp_dist_transeq.f90  test_omp_time_integrator.f90  test_omp_transeq.f90  test_omp_transeq_species.f90  test_omp_tridiag.f90  test_thom.f90
tests/omptgt/: test_omptgt_allocator.f90
tests/performance/: perf_cuda_penta.f90  perf_cuda_reorder.f90  perf_cuda_thom.f90  perf_cuda_transeq.f90  perf_cuda_tridiag.f90  perf_omp_thom.f90  perf_omp_tridiag.f90  perf_thom.f90
tests/reframe/: settings.py  x3d2_checks.py
tests/unit/: test_ab_checkpoint.f90  test_adios2_read_write.f90  test_allocator.pf  test_cuda_allocator.f90  test_cuda_reorder.f90  test_cuda_tridiag.f90  test_fft.f90  test_io_session.f90  test_mesh.pf  test_omp_dist_transeq.f90  test_omptgt_allocator.f90  test_output_scalars.f90  test_pfunit_demo.pf  test_reorder_map.pf  test_reordering.f90  test_setget_field.f90  test_snapshot_species_fields.f90  test_statistics.f90  test_statistics.pf  test_thom.f90  test_time_integrator.f90  test_vecadd.f90
tests/verification/: test_cuda_penta.f90  test_cuda_transeq.f90  test_cuda_tridiag.f90  test_memory_estimate.f90  test_omp_dist_transeq.f90  test_omp_penta.f90  test_omp_transeq.f90  test_omp_transeq_species.f90  test_omp_tridiag.f90  test_poisson_bc.f90  test_thom.f90
(+957 files in other folders)
